--- a/resources/sass/app.scss
+++ b/resources/sass/app.scss
@@ -8,9 +8,9 @@
 // Bootstrap
 @import '~bootstrap/scss/bootstrap';
 //leaflet
-@import '~leaflet/dist/leaflet.css';
+@import '~leaflet/dist/leaflet';
 //leaflet plugins
-@import '~leaflet.marker.highlight/dist/leaflet.marker.highlight.css';
+@import '~leaflet.marker.highlight/dist/leaflet.marker.highlight';
 //@import '~leaflet.beautifymarker/leaflet-beautify-marker-icon.css';
 //@import '~@ansur/leaflet-pulse-icon/dist/L.Icon.Pulse.css';
 
