add stations page

--- a/resources/sass/app.scss
+++ b/resources/sass/app.scss
@@ -13,6 +13,8 @@
 @import '~leaflet.marker.highlight/dist/leaflet.marker.highlight';
 //@import '~leaflet.beautifymarker/leaflet-beautify-marker-icon.css';
 //@import '~@ansur/leaflet-pulse-icon/dist/L.Icon.Pulse.css';
+//iconpicker
+//@import '~fontawesome-iconpicker/dist/css/fontawesome-iconpicker';
 
 .navbar-laravel {
   background-color: #fff;
